--- a/client/index.html
+++ b/client/index.html
@@ -5,20 +5,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Open Graph / Social Sharing -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://raising-the-bar.vercel.app/">
+  <meta property="og:url" content="https://raisingthebarapp.com/">
   <meta property="og:title" content="Raising The Bar – Adaptive Fitness Programs">
   <meta property="og:description"
     content="A smarter fitness tracker that adapts to your performance, meals, and lifestyle.">
-  <meta property="og:image" content="https://raising-the-bar.vercel.app/assets/og-preview.jpg">
+  <meta property="og:image" content="https://raisingthebarapp.com/assets/og-preview.jpg">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://raising-the-bar.vercel.app/">
+  <meta name="twitter:url" content="https://raisingthebarapp.com/">
   <meta name="twitter:title" content="Raising The Bar – Adaptive Fitness Programs">
   <meta name="twitter:description"
     content="A smarter fitness tracker that adapts to your performance, meals, and lifestyle.">
-  <meta name="twitter:image" content="https://raising-the-bar.vercel.app/assets/og-preview.jpg">
+  <meta name="twitter:image" content="https://raisingthebarapp.com/assets/og-preview.jpg">
 
   <title>Raising The Bar</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
@@ -53,23 +54,25 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
 }(window, document, 'ttq');
 </script> -->
   <!-- TikTok Pixel Code End -->
-    <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1217477006533345');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1217477006533345');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
