--- a/client/index.html
+++ b/client/index.html
@@ -183,7 +183,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </div>
     </div>
   </div>
-  <div class="slogan fade-in">
+  <div class="slogan">
     <p>We create fitness programs that adapt to your performance and how you feel.</p>
   </div>
   <div class="dark-mode-button">
@@ -191,7 +191,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </div>
 
   <section>
-    <div class="fade-in">
+    <div class="">
       <div class="cta-container">
         <a href="pages/forms.html" class="claim-program-btn">Claim Your Program</a>
       </div>
@@ -200,7 +200,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </p>
     </div>
   </section>
-  <section class="mini-testimonial fade-in">
+  <section class="mini-testimonial">
     <div class="testimonial-card mini">
       <div class="images">
         <div class="before">
@@ -221,7 +221,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </p>
     </div>
   </section>
-  <section class="tailored-training-plan fade-in">
+  <section class="tailored-training-plan">
     <h2>What You’re Getting</h2>
     <p class="hero-subheading">
       This is how you finally stay consistent — and see real progress.
@@ -259,7 +259,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       </p>
     </div>
   </section>
-  <section class="habit-building fade-in">
+  <section class="habit-building">
     <h2>Feel Better, Every Day</h2>
     <div class="habit-image">
       <img src="../assets/person_walking_outside.jpg" alt="A person running in nature or doing yoga outdoors" />
@@ -270,7 +270,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       yourself — day after day.
     </p>
   </section>
-  <section class="nutrition-section fade-in">
+  <section class="nutrition-section">
     <h2>Meals That Work With You</h2>
     <div class="nutrition-image">
       <img src="../assets/meal-prep.jpg" alt="A person preparing a healthy meal" />
@@ -281,7 +281,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </p>
   </section>
   <!-- Testimonial Section (Landing Page) -->
-  <div class="testimonial-section fade-in">
+  <div class="testimonial-section">
     <h2>See What Happens When Everything Connects</h2>
     <p class="hero-text">
       Progress from real people, using the same system you're about to unlock.
@@ -301,12 +301,12 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
   </div>
 
   <!-- Dots / Pagination for slides -->
-  <div class="dots-container fade-in"></div>
+  <div class="dots-container"></div>
 
-  <div class="cta-container-subtle fade-in">
+  <div class="cta-container-subtle">
     <a href="pages/forms.html" class="claim-program-btn-subtle">Claim Your Program</a>
   </div>
-  <section class="youtube-prompt-section fade-in">
+  <section class="youtube-prompt-section">
     <div class="youtube-video-container">
       <!-- Placeholder video -->
       <iframe width="560" height="315" src="https://www.youtube.com/embed/MPevL0xPZ9c" title="Raising The Bar Video"
@@ -339,7 +339,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     </div>
   </div>
 
-  <footer class="footer fade-in" id="footer">
+  <footer class="footer" id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
